@@ -15,6 +15,8 @@ v0.6.0, 2017-03-?? -- ???
  * removed deprecated functions:
    * mrjob.parse:
      * is_windows_path()
+     * parse_key_value_list()
+     * parse_port_range_list()
    * mrjob.util:
      * args_for_opt_dest_subset()
      * bash_wrap()
